--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,1 +1,22 @@
-<p>product-detail works!</p>
+<div class="container mx-auto mt-10 p-4">
+  <div class="flex flex-col md:flex-row">
+    <div class="md:w-1/2">
+      <img
+        [src]="product.image"
+        alt="{{ product.title }}"
+        class="w-full h-auto rounded-lg shadow-lg"
+      />
+    </div>
+    <div class="md:w-1/2 md:pl-8 mt-4 md:mt-0">
+      <h2 class="text-3xl font-bold text-gray-800">{{ product.title }}</h2>
+      <p class="text-sm text-gray-500 uppercase">{{ product.category }}</p>
+      <h4 class="text-xl text-blue-600 mt-2">${{ product.price }}</h4>
+      <p class="mt-4 text-gray-700">{{ product.description }}</p>
+      <button
+        class="mt-6 bg-green-500 text-white font-semibold py-2 px-4 rounded-lg shadow hover:bg-green-600 transition duration-300"
+      >
+        Add to Cart
+      </button>
+    </div>
+  </div>
+</div>
